Changelog
=========

3.2.4 (unreleased)
------------------

- Fixed interface in dossiers ConstrainTypeDecider.
  [phgross]

- Updated ftw.zipexport registry entry to multi-value field.
  [lknoepfel]

- Added handling for missing document_type in document view.
  This field is hidden on a customer installation.
  [lknoepfel]

- Dossierdetails PDF: Fixed doubled encoded repository_path.
  [phgross]

- Dossierdetails PDF: Fixed UnicodeEncodeError in responsible getter.
  [phgross]

- Added missing french (and german) translations.
  Fixed i18n domain and translated vdex.
  [lknoepfel]

- Passing search string from live search to advanced search.
  Using SearchableText from the url as default value in advanced search.
  [lknoepfel]

- Styled document from template form.
  [lknoepfel]

- Setup: Activate navigation portlet on the templatedossier.
  [phgross]

- Allow nested Templatedossiers.
  [phgross]

- Limit query depth in templatedossier listings(documents, trash).
  [phgross]

- Treeportlet: Implement deferred tree rendering.
  [phgross]

- Fixed German translation in logout overlay.
  [pha]

- Mail view: use sprite icons in the attachments list.
  [phgross]

- Implemented cache invalidation for TreeView portlet cache.
  [lgraf]

- Update og.mail tests according to changes in ftw.mail.
  (See https://github.com/4teamwork/ftw.mail/pull/17)

- Fixed typo in test_overview.py.
  [lknoepfel]

- Moved create repository script from opengever.zug package.
  [lknoepfel]

- Replaced ext-js function 'remove' with pure js version in advancedsearch.
  [lknoepfel]

- Fixed backref name of the groups_user join table.
  [phgross]

- Task overview: Hide client prefix in issuer value for a one client setup.
  [phgross]


3.2.3 (2014-04-01)
------------------

- Hide standard ftw.mail mail-in viewlet (we display the mail address in
  the byline).
  [lgraf]

- Removed og.mail IMailSettings registry interface (now done in ftw.mail).