@@ -3,17 +3,6 @@
      tal:condition="view/show">
 
   <ul tal:define="css_class view/get_css_class">
-
-    <li tal:condition="css_class"
-        tal:attributes="class string:byline-icon ${css_class};
-                        title context/Type">
-      &nbsp;
-    </li>
-
-    <li tal:define="lock_icon view/locked_icon" tal:condition="lock_icon" >
-      <span id="lock-icon" class="function-lock"/>
-    </li>
-
     <tal:repeat tal:repeat="item view/get_items">
       <li tal:attributes="class item/class" tal:condition="item/content">
          <span class="label"><span tal:content="item/label"></span>:</span>
