@@ -35,11 +35,6 @@ class TestDossierByline(TestBylineBase):
 
         self.browser.open(self.dossier.absolute_url())
 
-    def test_dossier_byline_icon_display(self):
-        icon = self.get_byline_element_by_class('byline-icon')
-        self.assertEquals('byline-icon contenttype-opengever-dossier-businesscasedossier',
-                          icon.target.get('class'))
-
     def test_dossier_byline_responsible_display(self):
         responsible = self.get_byline_value_by_label('by:')
         self.assertEquals('Boss Hugo (hugo.boss)', responsible.text_content())
