@@ -10,4 +10,12 @@
        permission="zope2.View"
        />
 
+   <browser:viewlet
+       name="plone.belowcontenttitle.documentbyline"
+       for="opengever.repository.repositoryroot.IRepositoryRoot"
+       manager="plone.app.layout.viewlets.interfaces.IBelowContentTitle"
+       class=".byline.RepositoryRootByline"
+       permission="zope2.View"
+       />
+
 </configure>
