@@ -31,11 +31,6 @@ class TestTaskByline(TestBylineBase):
         transaction.commit()
         self.browser.open(self.task.absolute_url())
 
-    def test_task_byline_icon_display(self):
-        icon = self.get_byline_element_by_class('byline-icon')
-        self.assertEquals('byline-icon contenttype-opengever-task-task',
-                          icon.target.get('class'))
-
     def test_task_byline_responsible_display(self):
         responsible = self.get_byline_value_by_label('by:')
         self.assertEquals('Boss Hugo (hugo.boss)', responsible.text_content().strip())
